# harvex

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.ja.md  README.md  README.zh-CN.md  pyproject.toml
src/fxharvest/: __init__.py
src/fxharvest/cli/: main.py
src/fxharvest/config/: __init__.py  settings.py
src/fxharvest/core/: errors.py  pipeline.py  registry.py  runner.py
src/fxharvest/extras/browser/: __init__.py  browser_source.py  runtime.py
src/fxharvest/extras/llm/: __init__.py  cache.py  enrich.py  schema.py  translator.py
src/fxharvest/extras/tui/: panel.py
src/fxharvest/extras/web/: __init__.py  service.py
src/fxharvest/extras/web/assets/: app.js  index.html  styles.css
src/fxharvest/meta/: health.py
src/fxharvest/net/: http_client.py  retry.py
src/fxharvest/notify/: __init__.py  notifier.py  webhook.py
src/fxharvest/obs/: __init__.py  logging.py
src/fxharvest/scheduling/: cron.py  launchd.py
src/fxharvest/storage/: __init__.py  fxdb.py  schema.py  sqlite_sink.py
src/harvex/: __init__.py
src/harvex/acquire/: __init__.py  base.py  manifest.py  registry.py
src/harvex/acquire/assets/plugins/: README.md
src/harvex/acquire/assets/plugins/applescript_browser/: acquirer.py  plugin.toml
src/harvex/acquire/assets/plugins/applescript_browser/assets/: control_browser.applescript  inject.js
src/harvex/acquire/assets/plugins/http/: acquirer.py  plugin.toml
src/harvex/acquire/assets/plugins/playwright_headless/: acquirer.py  plugin.toml
src/harvex/acquire/assets/plugins/playwright_headless/assets/: inject.js
src/harvex/cli/: main.py
src/harvex/config/: __init__.py  defaults.py  settings.py
src/harvex/core/: context.py  errors.py  pipeline.py  record.py  registry.py  runner.py  source.py
src/harvex/extras/browser/: __init__.py  browser_source.py  runtime.py
src/harvex/extras/llm/: __init__.py  enrich.py  translator.py
src/harvex/extras/parse/: __init__.py
src/harvex/extras/tui/: panel.py  textwidth.py
src/harvex/extras/web/: queries.py  service.py
src/harvex/extras/web/assets/: app.js  index.html  styles.css
src/harvex/meta/: __init__.py  health.py  metadata_db.py
src/harvex/net/: __init__.py  http_client.py  retry.py
src/harvex/notify/: __init__.py  notifier.py  webhook.py
src/harvex/obs/: __init__.py  logging.py
src/harvex/scheduling/: cron.py  launchd.py
src/harvex/storage/: __init__.py  database.py  sink.py  sqlite_sink.py
templates/project/: .env.local.example  config.toml  fields.py  pyproject.toml
templates/project/sources/: __init__.py  example_source.py
tests/: conftest.py
tests/acquire/: test_plugins.py
tests/config/: __init__.py  test_settings.py
tests/core/: __init__.py  test_pipeline_runner.py  test_record.py  test_registry.py
tests/extras/: test_extras.py
tests/meta/: __init__.py  test_metadata_health.py
tests/net/: __init__.py  test_http_client.py
tests/notify/: __init__.py  test_webhook.py
tests/storage/: __init__.py  test_sqlite_sink.py
