[project]
name = "fxharvest"
version = "0.1.0"
description = "可本地复用的「数据采集 → 收口 → SQLite → 浏览/增强」框架库"
readme = "README.md"
requires-python = ">=3.11"
# 核心零重依赖：只保留 pydantic / httpx / tenacity 三件套
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "tenacity>=8.2",
]

[project.optional-dependencies]
# 可选扩展：按需安装，核心永不强拉这些重依赖
browser = ["playwright>=1.42"]
llm = ["openai>=1.30"]
web = []          # 只读浏览 UI 走 stdlib http.server，无第三方依赖
tui = []          # 本地控制面板走 stdlib，无第三方依赖
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
# CLI 入口：fxharvest run / list / health / gen-launchd / web / tui
fxharvest = "fxharvest.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fxharvest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
