[project]
name = "harvex"
version = "0.1.0"
description = "AI 时代的数据采集基座 —— 为 AI agent 与 vibecoding 打造的零样板数据采集框架"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stephen Fang", email = "qazwsx80@gmail.com" }]
keywords = [
    "data-harvesting", "scraping", "crawler", "ai-agent", "vibecoding",
    "sqlite", "pipeline", "etl", "framework", "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Database",
]
# 核心零重依赖：只保留 pydantic / httpx / tenacity 三件套
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "tenacity>=8.2",
]

[project.optional-dependencies]
# 可选扩展：按需安装，核心永不强拉这些重依赖
browser = ["playwright>=1.42"]
llm = ["openai>=1.30"]
web = []          # 只读浏览 UI 走 stdlib http.server，无第三方依赖
tui = []          # 本地控制面板走 stdlib，无第三方依赖
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.urls]
Homepage = "https://github.com/stephen-fang/harvex"
Repository = "https://github.com/stephen-fang/harvex"
Issues = "https://github.com/stephen-fang/harvex/issues"
Changelog = "https://github.com/stephen-fang/harvex/blob/main/CHANGELOG.md"

[project.scripts]
# CLI 入口：harvex run / list / health / gen-launchd / web / tui
harvex = "harvex.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harvex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
