[project]
name = "my-harvest-project"
version = "0.1.0"
description = "基于 harvex 的数据采集项目"
requires-python = ">=3.11"
dependencies = [
    "harvex",
    # 按需启用扩展：
    # "harvex[browser]",   # 渲染型站点（playwright）
    # "harvex[llm]",       # LLM 翻译/增强（openai）
]

# 本地路径引用共享框架，不发布
[tool.uv.sources]
harvex = { path = "../../harvex", editable = true }

[tool.harvex]
# 预留：项目级框架配置（当前主要配置在 config.toml）
